UKVI Business area management improvements (#746)
- [HOCS-7055] include active flag as editable field for entities
- [HOCS-7056] add query parameter that resorts the entity list when true

(cherry picked from commit c67bb61cd5b470c14047195a5fe4dfdb49b137ca)